test/integration/bad/tuples/bad_unpack4.stan
transformed data {
  int x = 3;
  int y = 4;
  (x, y) = (y, x, x);
}
